# ssim

./: .clang-format  .clang-tidy  .clangd  .continueignore  .gitignore  CMakeLists.txt  LICENSE  README.md  get-mathprim.sh  pyproject.toml
bindings/: CMakeLists.txt
bindings/src/: fem.hpp  fem_cuda.cu  fem_host.cpp  main.cpp
bindings/tests/: intro.py  intro_cu.py
pyssim/: __init__.py
pyssim/fem/: __init__.py
ssim/: CMakeLists.txt
ssim/include/ssim/: defines.hpp
ssim/include/ssim/elast/: basic_elast.hpp  internal_physic.hpp  linear.hpp  stable_neohookean.hpp
ssim/include/ssim/finite_elements/: backward_euler.hpp  bilinears.hpp  boundary.hpp  def_grad.hpp  defines.hpp  global_composer.hpp  rest_vol.hpp  time_step.hpp
ssim/include/ssim/finite_elements/stepper/: backward_euler.hpp  nonlinear_cg.hpp  projective_dynamics.hpp
ssim/include/ssim/finite_elements/term/: basic_term.hpp
ssim/include/ssim/mesh/: basic_mesh.hpp  common_shapes.hpp
tests/: CMakeLists.txt
tests/fem_cu/: main.cu
tests/fem_ext_ai/: main.cpp
tests/fem_intro/: main.cpp
tests/fem_local_global/: main.cpp
tests/fem_time_step/: main.cpp  visualize.py
tests/fem_time_step_diff/: main.cpp
